syntax = "proto3";

package customer.v1;

service CustomerService {
    rpc GetCustomerById(IdRequest) returns (Customer);
}

message IdRequest {
    string id = 1;
}

message Customer {
    string id = 1;
    string name = 2;
}